[gd_scene load_steps=2 format=3 uid="uid://bswb5chxpkqhu"]

[ext_resource type="Script" path="res://objects/gimble_camera/gimble_camera.gd" id="1_bbu0p"]

[node name="GimbleCamera" type="Node3D"]
script = ExtResource("1_bbu0p")

[node name="InnerGimble" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="InnerGimble"]

[node name="ClipCast" type="RayCast3D" parent="InnerGimble"]
